--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -21,12 +21,6 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
-    - name: commit changes
-      run: |
-        git stash
-        git remote update
-        git fetch
-        git checkout –-track origin/l10_base
     - name: Install Dependencies
       run: |
           sudo apt-get update
@@ -37,11 +31,15 @@ jobs:
       run: |
         cd InvenTree
         python manage.py makemessages -e py -e html -e js
-    - name: commit changes
+    - name: stash changes
       run: |
         git stash
-        git fetch
-        git checkout -–track origin/l10_base
+    - name: Checkout tranlation-branch
+      uses: actions/checkout@v2.3.4
+      with:
+        ref: l10_base
+    - name: commit changes
+      run: |
         git stash pop
         git add InvenTree/*.po
         git commit -m "updated translation-file"
