--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -1,6 +1,11 @@
 name: Make Translation
 
 on: [push]
+# on:
+#  push:
+#    branches:
+#      - master
+
 
 jobs:
   build:
@@ -17,6 +22,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: get current translations
+      run: |
+        git checkout origin/l10_base -- "*.po"
     - name: Set up Python 3.7
       uses: actions/setup-python@v1
       with:
