--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -25,7 +25,7 @@ jobs:
     - name: get current translations
       run: |
         git fetch origin
-        git checkout l10_base -- "*.po"
+        git checkout origin/l10_base -- "*.po"
     - name: Set up Python 3.7
       uses: actions/setup-python@v1
       with:
