--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -24,8 +24,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: get current translations
       run: |
-        git fetch origin
-        git checkout origin/l10_base -- "*.po"
+        git fetch
+        git checkout origin/l10_base -- `git ls-tree origin/l10_base -r --name-only | grep ".po"`
+        git reset
     - name: Set up Python 3.7
       uses: actions/setup-python@v1
       with:
