maybe frocing it?

--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -50,8 +50,7 @@ jobs:
         ref: l10_base
     - name: commit changes
       run: |
-        git stash show -p
-        git stash apply
+        git checkout stash -- .
         git add InvenTree/*.po
         git diff --name-only --diff-filter=U
         git commit -m "updated translation-file"
