--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -48,10 +48,14 @@ jobs:
       uses: actions/checkout@v2.3.4
       with:
         ref: l10_base
-    - name: commit changes
+    - name: Commit files
       run: |
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
         git checkout stash -- .
-        git add InvenTree/*.po
-        git diff --name-only --diff-filter=U
-        git commit -m "updated translation-file"
-        git push
+        git commit -m "Add changes"
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: l10_base
