only commit *.po

--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -1,6 +1,6 @@
 name: Make Translation
 
-on: [push]
+on: ["push", "pull_request"]
 # on:
 #  push:
 #    branches:
@@ -53,7 +53,9 @@ jobs:
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git checkout stash -- .
-        git commit -m "Add changes"
+        git reset
+        git add "*.po"
+        git commit -m "generated translation base"
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
